add 'delete' proto / event listener, remove label

--- a/index.html
+++ b/index.html
@@ -21,18 +21,15 @@
     <!-- Form - Add Movie -->
     <form id="movie-form">
       <div>
-        <label for="title">Title</label>
-        <input type="text" id="title" class="u-full-width">
+        <input type="text" id="title" class="u-full-width" placeholder="Movie Title">
       </div>
 
       <div>
-        <label for="director">Director</label>
-        <input type="text" id="director" class="u-full-width">
+        <input type="text" id="year" class="u-full-width" placeholder="Year">
       </div>
 
       <div>
-        <label for="imdb">IMDB</label>
-        <input type="text" id="imdb" class="u-full-width">
+        <input type="text" id="imdb" class="u-full-width" placeholder="IMDB url">
       </div>
 
       <button type="submit" class="u-full-width">Add</button>
@@ -43,7 +40,7 @@
       <thead>
         <tr>
           <th>Title</th>
-          <th>Director</th>
+          <th>Year</th>
           <th>IMDB</th>
           <th></th>
         </tr>
