h1,h6 - add text align; minor style upd.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Skeleton Container -->
   <div class="container">
     <h1>My Watchlist</h1>
-
+    <h6>Save Movies to Watch Later</h6>
     <!-- Form - Add Movie -->
     <form id="movie-form">
       <div>
